# sqlite_orm

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
src/: __init__.py  base_model.py
src/database/: connection.py  field_types.py  query.py
